--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tevree",
   "version": "1.0.0",
-  "description": "",
+  "description": "test app for tevree",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "bower": "^1.8.0"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
